--- a/index.html
+++ b/index.html
@@ -5,5 +5,104 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <a href="/">Web Studio</a>
+        <ul>
+          <li><a href="/">Студия</a></li>
+          <li><a href="/">Портфолио</a></li>
+          <li><a href="/">Контакты</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li>
+          <img
+            src="/images/envelope (hover).svg"
+            alt="отправить електронное письмо"
+          />
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+          <img src="/images/Vector.svg" alt="позвонить по номеру" />
+          <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+        </li>
+      </ul>
+    </header>
+    <section>
+      <h1>эффективные решения для вашего бизнеса</h1>
+      <a href="/">Заказать услугу</a>
+    </section>
+    <section>
+      <h2>наши преимущества</h2>
+      <li>
+        <h3>Внимание к деталям</h3>
+        <p>
+          Идейные соображения, а также начало повседневной работы по
+          формированию позиции.
+        </p>
+      </li>
+      <li>
+        <h3>Пунктуальность</h3>
+        <p>
+          Задача организации, в особенности же рамки и место обучения кадров
+          влечет за собой.
+        </p>
+      </li>
+      <li>
+        <h3>Планирование</h3>
+        <p>
+          Равным образом консультация с широким активом в значительной степени
+          обуславливает.
+        </p>
+      </li>
+      <li>
+        <h3>Современные технологии</h3>
+        <p>
+          Значимость этих проблем настолько очевидна, что реализация плановых
+          заданий.
+        </p>
+      </li>
+    </section>
+    <section>
+      <h2>Чем мы занимаемся</h2>
+      <ul>
+        <li><a href="">Десктопные приложения</a></li>
+        <li><a href="">Мобильные приложения</a></li>
+        <li><a href="">Дизайнерские решения</a></li>
+      </ul>
+    </section>
+    <section>
+      <h2>Наша команда</h2>
+      <ul>
+        <li>
+          <h3>John Smith</h3>
+          <p>Product Designer</p>
+        </li>
+        <li>
+          <h3>Marta Stewart</h3>
+          <p>Frontend Developer</p>
+        </li>
+        <li>
+          <h3>Robert Jakis</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <h3>Martin Doe</h3>
+          <p>UI Designer</p>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Постоянные клиенты</h2>
+      <ul>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+      </ul>
+    </section>
+  </body>
 </html>
