--- a/index.html
+++ b/index.html
@@ -29,80 +29,99 @@
         </li>
       </ul>
     </header>
-    <section>
-      <h1>эффективные решения для вашего бизнеса</h1>
-      <a href="/">Заказать услугу</a>
-    </section>
-    <section>
-      <h2>наши преимущества</h2>
-      <li>
-        <h3>Внимание к деталям</h3>
-        <p>
-          Идейные соображения, а также начало повседневной работы по
-          формированию позиции.
-        </p>
-      </li>
-      <li>
-        <h3>Пунктуальность</h3>
-        <p>
-          Задача организации, в особенности же рамки и место обучения кадров
-          влечет за собой.
-        </p>
-      </li>
-      <li>
-        <h3>Планирование</h3>
-        <p>
-          Равным образом консультация с широким активом в значительной степени
-          обуславливает.
-        </p>
-      </li>
-      <li>
-        <h3>Современные технологии</h3>
-        <p>
-          Значимость этих проблем настолько очевидна, что реализация плановых
-          заданий.
-        </p>
-      </li>
-    </section>
-    <section>
-      <h2>Чем мы занимаемся</h2>
-      <ul>
-        <li><a href="">Десктопные приложения</a></li>
-        <li><a href="">Мобильные приложения</a></li>
-        <li><a href="">Дизайнерские решения</a></li>
-      </ul>
-    </section>
-    <section>
-      <h2>Наша команда</h2>
-      <ul>
+    <main>
+      <section>
+        <h1>эффективные решения для вашего бизнеса</h1>
+        <a href="/">Заказать услугу</a>
+      </section>
+      <section>
+        <h2>наши преимущества</h2>
         <li>
-          <h3>John Smith</h3>
-          <p>Product Designer</p>
+          <h3>Внимание к деталям</h3>
+          <p>
+            Идейные соображения, а также начало повседневной работы по
+            формированию позиции.
+          </p>
         </li>
         <li>
-          <h3>Marta Stewart</h3>
-          <p>Frontend Developer</p>
+          <h3>Пунктуальность</h3>
+          <p>
+            Задача организации, в особенности же рамки и место обучения кадров
+            влечет за собой.
+          </p>
         </li>
         <li>
-          <h3>Robert Jakis</h3>
-          <p>Marketing</p>
+          <h3>Планирование</h3>
+          <p>
+            Равным образом консультация с широким активом в значительной степени
+            обуславливает.
+          </p>
         </li>
         <li>
-          <h3>Martin Doe</h3>
-          <p>UI Designer</p>
+          <h3>Современные технологии</h3>
+          <p>
+            Значимость этих проблем настолько очевидна, что реализация плановых
+            заданий.
+          </p>
         </li>
-      </ul>
-    </section>
-    <section>
-      <h2>Постоянные клиенты</h2>
-      <ul>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-      </ul>
-    </section>
+      </section>
+      <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li><a href="">Десктопные приложения</a></li>
+          <li><a href="">Мобильные приложения</a></li>
+          <li><a href="">Дизайнерские решения</a></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <h3>John Smith</h3>
+            <p>Product Designer</p>
+            <a href="">instagram</a>
+            <a href="">twitter</a>
+            <a href="">facebook</a>
+            <a href="">link</a>
+          </li>
+          <li>
+            <h3>Marta Stewart</h3>
+            <p>Frontend Developer</p>
+            <a href="">instagram</a>
+            <a href="">twitter</a>
+            <a href="">facebook</a>
+            <a href="">link</a>
+          </li>
+          <li>
+            <h3>Robert Jakis</h3>
+            <p>Marketing</p>
+            <a href="">instagram</a>
+            <a href="">twitter</a>
+            <a href="">facebook</a>
+            <a href="">link</a>
+          </li>
+          <li>
+            <h3>Martin Doe</h3>
+            <p>UI Designer</p>
+            <a href="">instagram</a>
+            <a href="">twitter</a>
+            <a href="">facebook</a>
+            <a href="">link</a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Постоянные клиенты</h2>
+        <ul>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+        </ul>
+      </section>
+    </main>
+    <footer></footer>
   </body>
 </html>
