--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <nav>
-        <a href="/">Web Studio</a>
+        <a href="/"><img src="/images/Web Studio.svg" alt="logo" /></a>
         <ul>
           <li><a href="/">Студия</a></li>
           <li><a href="/">Портфолио</a></li>
@@ -37,6 +37,7 @@
       <section>
         <h2>наши преимущества</h2>
         <li>
+          <img src="/images/antenna 1.svg" alt="антена" />
           <h3>Внимание к деталям</h3>
           <p>
             Идейные соображения, а также начало повседневной работы по
@@ -44,6 +45,7 @@
           </p>
         </li>
         <li>
+          <img src="/images/clock 1.svg" alt="часы" />
           <h3>Пунктуальность</h3>
           <p>
             Задача организации, в особенности же рамки и место обучения кадров
@@ -51,6 +53,7 @@
           </p>
         </li>
         <li>
+          <img src="/images/diagram 1.svg" alt="диаграма" />
           <h3>Планирование</h3>
           <p>
             Равным образом консультация с широким активом в значительной степени
@@ -58,6 +61,7 @@
           </p>
         </li>
         <li>
+          <img src="/images/astronaut 1.svg" alt="астронавт" />
           <h3>Современные технологии</h3>
           <p>
             Значимость этих проблем настолько очевидна, что реализация плановых
@@ -68,60 +72,125 @@
       <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
-          <li><a href="">Десктопные приложения</a></li>
-          <li><a href="">Мобильные приложения</a></li>
-          <li><a href="">Дизайнерские решения</a></li>
+          <li>
+            <img src="/images/img.jpg" alt="ноутбук" />
+            <a href="">Десктопные приложения</a>
+          </li>
+          <li>
+            <img src="/images/box.jpg" alt="смартфон" />
+            <a href="">Мобильные приложения</a>
+          </li>
+          <li>
+            <img src="/images/img (1).jpg" alt="моноблок" />
+            <a href="">Дизайнерские решения</a>
+          </li>
         </ul>
       </section>
       <section>
         <h2>Наша команда</h2>
         <ul>
           <li>
+            <img src="/images/foto1.jpg" alt="фото John Smith" />
             <h3>John Smith</h3>
             <p>Product Designer</p>
-            <a href="">instagram</a>
-            <a href="">twitter</a>
-            <a href="">facebook</a>
-            <a href="">link</a>
+            <a href=""><img src="/images/instagram 2.svg" alt="insta" /></a>
+            <a href=""><img src="/images/twitter 1.svg" alt="twitter" /></a>
+            <a href=""><img src="/images/facebook 1.svg" alt="facebook" /></a>
+            <a href=""><img src="/images/linkedin 1.svg" alt="link" /></a>
           </li>
           <li>
+            <img src="/images/foto2.jpg" alt="фото Marta Stewart" />
             <h3>Marta Stewart</h3>
             <p>Frontend Developer</p>
-            <a href="">instagram</a>
-            <a href="">twitter</a>
-            <a href="">facebook</a>
-            <a href="">link</a>
+            <a href=""><img src="/images/instagram 2.svg" alt="insta" /></a>
+            <a href=""><img src="/images/twitter 1.svg" alt="twitter" /></a>
+            <a href=""><img src="/images/facebook 1.svg" alt="facebook" /></a>
+            <a href=""><img src="/images/linkedin 1.svg" alt="link" /></a>
           </li>
           <li>
+            <img src="/images/foto3.jpg" alt="фото Robert Jakis" />
             <h3>Robert Jakis</h3>
             <p>Marketing</p>
-            <a href="">instagram</a>
-            <a href="">twitter</a>
-            <a href="">facebook</a>
-            <a href="">link</a>
+            <a href=""><img src="/images/instagram 2.svg" alt="insta" /></a>
+            <a href=""><img src="/images/twitter 1.svg" alt="twitter" /></a>
+            <a href=""><img src="/images/facebook 1.svg" alt="facebook" /></a>
+            <a href=""><img src="/images/linkedin 1.svg" alt="link" /></a>
           </li>
           <li>
+            <img src="/images/foto4.jpg" alt="фото Martin Doe" />
             <h3>Martin Doe</h3>
             <p>UI Designer</p>
-            <a href="">instagram</a>
-            <a href="">twitter</a>
-            <a href="">facebook</a>
-            <a href="">link</a>
+            <a href=""><img src="/images/instagram 2.svg" alt="insta" /></a>
+            <a href=""><img src="/images/twitter 1.svg" alt="twitter" /></a>
+            <a href=""><img src="/images/facebook 1.svg" alt="facebook" /></a>
+            <a href=""><img src="/images/linkedin 1.svg" alt="link" /></a>
           </li>
         </ul>
       </section>
       <section>
         <h2>Постоянные клиенты</h2>
         <ul>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
+          <li>
+            <a href=""><img src="/images/Client 1.svg" alt="Client 1" /></a>
+          </li>
+          <li>
+            <a href=""><img src="/images/Client 2.svg" alt="Client 2" /></a>
+          </li>
+          <li>
+            <a href=""><img src="/images/Client 3.svg" alt="Client 3" /></a>
+          </li>
+          <li>
+            <a href=""><img src="/images/Client 4.svg" alt="Client 4" /></a>
+          </li>
+          <li>
+            <a href=""><img src="/images/Client 5.svg" alt="Client 5" /></a>
+          </li>
+          <li>
+            <a href=""><img src="/images/Client 6.svg" alt="Client 6" /></a>
+          </li>
         </ul>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <section>
+        <a href="/"><img src="/images/Web Studio.svg" alt="logo" /></a>
+        <address>
+          <p>г. Киев, пр-т Леси Украинки, 26</p>
+        </address>
+        <a href="mailto:info@example.com">info@example.com</a>
+        <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+      </section>
+      <section>
+        <h2>присоединяйтесь</h2>
+        <ul>
+          <li>
+            <a href=""
+              ><img src="/images/Ellipse inst foot.svg" alt="insta"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="/images/Ellipse twitter foot.svg" alt="twitter"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="/images/Ellipse facebook foot.svg" alt="facebook"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="/images/Ellipse linked foot.svg" alt="link"
+            /></a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Подпишитесь на рассылку</h2>
+      </section>
+      <section>
+        <p>2020 | Developed by GoIT Students</p>
+      </section>
+    </footer>
   </body>
 </html>
