--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,7 +8,7 @@
   <body>
     <header>
       <nav>
-        <a href="/"><img src="/images/Web Studio.svg" alt="logo" /></a>
+        <a href="/"><img src="/images/WebStudio.svg" alt="logo" /></a>
         <ul>
           <li><a href="/">Студия</a></li>
           <li><a href="/">Портфолио</a></li>
@@ -18,14 +18,14 @@
       <ul>
         <li>
           <img
-            src="/images/envelope (hover).svg"
+            src="/images/envelope(hover).svg"
             alt="отправить електронное письмо"
           />
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
           <img src="/images/Vector.svg" alt="позвонить по номеру" />
-          <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -36,38 +36,40 @@
       </section>
       <section>
         <h2>наши преимущества</h2>
-        <li>
-          <img src="/images/antenna 1.svg" alt="антена" />
-          <h3>Внимание к деталям</h3>
-          <p>
-            Идейные соображения, а также начало повседневной работы по
-            формированию позиции.
-          </p>
-        </li>
-        <li>
-          <img src="/images/clock 1.svg" alt="часы" />
-          <h3>Пунктуальность</h3>
-          <p>
-            Задача организации, в особенности же рамки и место обучения кадров
-            влечет за собой.
-          </p>
-        </li>
-        <li>
-          <img src="/images/diagram 1.svg" alt="диаграма" />
-          <h3>Планирование</h3>
-          <p>
-            Равным образом консультация с широким активом в значительной степени
-            обуславливает.
-          </p>
-        </li>
-        <li>
-          <img src="/images/astronaut 1.svg" alt="астронавт" />
-          <h3>Современные технологии</h3>
-          <p>
-            Значимость этих проблем настолько очевидна, что реализация плановых
-            заданий.
-          </p>
-        </li>
+        <ul>
+          <li>
+            <img src="/images/antenna1.svg" alt="антена" />
+            <h3>Внимание к деталям</h3>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <img src="/images/clock1.svg" alt="часы" />
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <img src="/images/diagram1.svg" alt="диаграма" />
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <img src="/images/astronaut1.svg" alt="астронавт" />
+            <h3>Современные технологии</h3>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
       </section>
       <section>
         <h2>Чем мы занимаемся</h2>
@@ -81,7 +83,7 @@
             <a href="">Мобильные приложения</a>
           </li>
           <li>
-            <img src="/images/img (1).jpg" alt="моноблок" />
+            <img src="/images/img(1).jpg" alt="моноблок" />
             <a href="">Дизайнерские решения</a>
           </li>
         </ul>
@@ -93,37 +95,37 @@
             <img src="/images/foto1.jpg" alt="фото John Smith" />
             <h3>John Smith</h3>
             <p>Product Designer</p>
-            <a href=""><img src="/images/instagram 2.svg" alt="insta" /></a>
-            <a href=""><img src="/images/twitter 1.svg" alt="twitter" /></a>
-            <a href=""><img src="/images/facebook 1.svg" alt="facebook" /></a>
-            <a href=""><img src="/images/linkedin 1.svg" alt="link" /></a>
+            <a href=""><img src="/images/instagram2.svg" alt="insta" /></a>
+            <a href=""><img src="/images/twitter1.svg" alt="twitter" /></a>
+            <a href=""><img src="/images/facebook1.svg" alt="facebook" /></a>
+            <a href=""><img src="/images/linkedin1.svg" alt="link" /></a>
           </li>
           <li>
             <img src="/images/foto2.jpg" alt="фото Marta Stewart" />
             <h3>Marta Stewart</h3>
             <p>Frontend Developer</p>
-            <a href=""><img src="/images/instagram 2.svg" alt="insta" /></a>
-            <a href=""><img src="/images/twitter 1.svg" alt="twitter" /></a>
-            <a href=""><img src="/images/facebook 1.svg" alt="facebook" /></a>
-            <a href=""><img src="/images/linkedin 1.svg" alt="link" /></a>
+            <a href=""><img src="/images/instagram2.svg" alt="insta" /></a>
+            <a href=""><img src="/images/twitter1.svg" alt="twitter" /></a>
+            <a href=""><img src="/images/facebook1.svg" alt="facebook" /></a>
+            <a href=""><img src="/images/linkedin1.svg" alt="link" /></a>
           </li>
           <li>
             <img src="/images/foto3.jpg" alt="фото Robert Jakis" />
             <h3>Robert Jakis</h3>
             <p>Marketing</p>
-            <a href=""><img src="/images/instagram 2.svg" alt="insta" /></a>
-            <a href=""><img src="/images/twitter 1.svg" alt="twitter" /></a>
-            <a href=""><img src="/images/facebook 1.svg" alt="facebook" /></a>
-            <a href=""><img src="/images/linkedin 1.svg" alt="link" /></a>
+            <a href=""><img src="/images/instagram2.svg" alt="insta" /></a>
+            <a href=""><img src="/images/twitter1.svg" alt="twitter" /></a>
+            <a href=""><img src="/images/facebook1.svg" alt="facebook" /></a>
+            <a href=""><img src="/images/linkedin1.svg" alt="link" /></a>
           </li>
           <li>
             <img src="/images/foto4.jpg" alt="фото Martin Doe" />
             <h3>Martin Doe</h3>
             <p>UI Designer</p>
-            <a href=""><img src="/images/instagram 2.svg" alt="insta" /></a>
-            <a href=""><img src="/images/twitter 1.svg" alt="twitter" /></a>
-            <a href=""><img src="/images/facebook 1.svg" alt="facebook" /></a>
-            <a href=""><img src="/images/linkedin 1.svg" alt="link" /></a>
+            <a href=""><img src="/images/instagram2.svg" alt="insta" /></a>
+            <a href=""><img src="/images/twitter1.svg" alt="twitter" /></a>
+            <a href=""><img src="/images/facebook1.svg" alt="facebook" /></a>
+            <a href=""><img src="/images/linkedin1.svg" alt="link" /></a>
           </li>
         </ul>
       </section>
@@ -131,56 +133,54 @@
         <h2>Постоянные клиенты</h2>
         <ul>
           <li>
-            <a href=""><img src="/images/Client 1.svg" alt="Client 1" /></a>
+            <a href=""><img src="/images/Client1.svg" alt="Client 1" /></a>
           </li>
           <li>
-            <a href=""><img src="/images/Client 2.svg" alt="Client 2" /></a>
+            <a href=""><img src="/images/Client2.svg" alt="Client 2" /></a>
           </li>
           <li>
-            <a href=""><img src="/images/Client 3.svg" alt="Client 3" /></a>
+            <a href=""><img src="/images/Client3.svg" alt="Client 3" /></a>
           </li>
           <li>
-            <a href=""><img src="/images/Client 4.svg" alt="Client 4" /></a>
+            <a href=""><img src="/images/Client4.svg" alt="Client 4" /></a>
           </li>
           <li>
-            <a href=""><img src="/images/Client 5.svg" alt="Client 5" /></a>
+            <a href=""><img src="/images/Client5.svg" alt="Client 5" /></a>
           </li>
           <li>
-            <a href=""><img src="/images/Client 6.svg" alt="Client 6" /></a>
+            <a href=""><img src="/images/Client6.svg" alt="Client 6" /></a>
           </li>
         </ul>
       </section>
     </main>
     <footer>
       <section>
-        <a href="/"><img src="/images/Web Studio.svg" alt="logo" /></a>
+        <a href="/"><img src="/images/WebStudio.svg" alt="logo" /></a>
         <address>
           <p>г. Киев, пр-т Леси Украинки, 26</p>
         </address>
         <a href="mailto:info@example.com">info@example.com</a>
-        <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
       </section>
       <section>
         <h2>присоединяйтесь</h2>
         <ul>
           <li>
+            <a href=""><img src="/images/Ellipseinstfoot.svg" alt="insta" /></a>
+          </li>
+          <li>
             <a href=""
-              ><img src="/images/Ellipse inst foot.svg" alt="insta"
+              ><img src="/images/Ellipsetwitterfoot.svg" alt="twitter"
             /></a>
           </li>
           <li>
             <a href=""
-              ><img src="/images/Ellipse twitter foot.svg" alt="twitter"
+              ><img src="/images/Ellipsefacebookfoot.svg" alt="facebook"
             /></a>
           </li>
           <li>
             <a href=""
-              ><img src="/images/Ellipse facebook foot.svg" alt="facebook"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="/images/Ellipse linked foot.svg" alt="link"
+              ><img src="/images/Ellipselinkedfoot.svg" alt="link"
             /></a>
           </li>
         </ul>
