--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <nav>
-        <a href="/"><img src="/images/WebStudio.svg" alt="logo" /></a>
+        <a href="/"><img src="./images/WebStudio.svg" alt="logo" /></a>
         <ul>
           <li><a href="/">Студия</a></li>
           <li><a href="/">Портфолио</a></li>
@@ -18,13 +18,13 @@
       <ul>
         <li>
           <img
-            src="/images/envelope(hover).svg"
+            src="./images/envelope(hover).svg"
             alt="отправить електронное письмо"
           />
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-          <img src="/images/Vector.svg" alt="позвонить по номеру" />
+          <img src="./images/Vector.svg" alt="позвонить по номеру" />
           <a href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
@@ -38,7 +38,7 @@
         <h2>наши преимущества</h2>
         <ul>
           <li>
-            <img src="/images/antenna1.svg" alt="антена" />
+            <img src="./images/antenna1.svg" alt="антена" />
             <h3>Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
@@ -46,7 +46,7 @@
             </p>
           </li>
           <li>
-            <img src="/images/clock1.svg" alt="часы" />
+            <img src="./images/clock1.svg" alt="часы" />
             <h3>Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
@@ -54,7 +54,7 @@
             </p>
           </li>
           <li>
-            <img src="/images/diagram1.svg" alt="диаграма" />
+            <img src="./images/diagram1.svg" alt="диаграма" />
             <h3>Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
@@ -62,7 +62,7 @@
             </p>
           </li>
           <li>
-            <img src="/images/astronaut1.svg" alt="астронавт" />
+            <img src="./images/astronaut1.svg" alt="астронавт" />
             <h3>Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
@@ -75,15 +75,15 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <img src="/images/img.jpg" alt="ноутбук" />
+            <img src="./images/img.jpg" alt="ноутбук" />
             <a href="">Десктопные приложения</a>
           </li>
           <li>
-            <img src="/images/box.jpg" alt="смартфон" />
+            <img src="./images/box.jpg" alt="смартфон" />
             <a href="">Мобильные приложения</a>
           </li>
           <li>
-            <img src="/images/img(1).jpg" alt="моноблок" />
+            <img src="./images/img(1).jpg" alt="моноблок" />
             <a href="">Дизайнерские решения</a>
           </li>
         </ul>
@@ -92,40 +92,40 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="/images/foto1.jpg" alt="фото John Smith" />
+            <img src="./images/foto1.jpg" alt="фото John Smith" />
             <h3>John Smith</h3>
             <p>Product Designer</p>
-            <a href=""><img src="/images/instagram2.svg" alt="insta" /></a>
-            <a href=""><img src="/images/twitter1.svg" alt="twitter" /></a>
-            <a href=""><img src="/images/facebook1.svg" alt="facebook" /></a>
-            <a href=""><img src="/images/linkedin1.svg" alt="link" /></a>
+            <a href=""><img src="./images/instagram2.svg" alt="insta" /></a>
+            <a href=""><img src="./images/twitter1.svg" alt="twitter" /></a>
+            <a href=""><img src="./images/facebook1.svg" alt="facebook" /></a>
+            <a href=""><img src="./images/linkedin1.svg" alt="link" /></a>
           </li>
           <li>
-            <img src="/images/foto2.jpg" alt="фото Marta Stewart" />
+            <img src="./images/foto2.jpg" alt="фото Marta Stewart" />
             <h3>Marta Stewart</h3>
             <p>Frontend Developer</p>
-            <a href=""><img src="/images/instagram2.svg" alt="insta" /></a>
-            <a href=""><img src="/images/twitter1.svg" alt="twitter" /></a>
-            <a href=""><img src="/images/facebook1.svg" alt="facebook" /></a>
-            <a href=""><img src="/images/linkedin1.svg" alt="link" /></a>
+            <a href=""><img src="./images/instagram2.svg" alt="insta" /></a>
+            <a href=""><img src="./images/twitter1.svg" alt="twitter" /></a>
+            <a href=""><img src="./images/facebook1.svg" alt="facebook" /></a>
+            <a href=""><img src="./images/linkedin1.svg" alt="link" /></a>
           </li>
           <li>
-            <img src="/images/foto3.jpg" alt="фото Robert Jakis" />
+            <img src="./images/foto3.jpg" alt="фото Robert Jakis" />
             <h3>Robert Jakis</h3>
             <p>Marketing</p>
-            <a href=""><img src="/images/instagram2.svg" alt="insta" /></a>
-            <a href=""><img src="/images/twitter1.svg" alt="twitter" /></a>
-            <a href=""><img src="/images/facebook1.svg" alt="facebook" /></a>
-            <a href=""><img src="/images/linkedin1.svg" alt="link" /></a>
+            <a href=""><img src="./images/instagram2.svg" alt="insta" /></a>
+            <a href=""><img src="./images/twitter1.svg" alt="twitter" /></a>
+            <a href=""><img src="./images/facebook1.svg" alt="facebook" /></a>
+            <a href=""><img src="./images/linkedin1.svg" alt="link" /></a>
           </li>
           <li>
-            <img src="/images/foto4.jpg" alt="фото Martin Doe" />
+            <img src="./images/foto4.jpg" alt="фото Martin Doe" />
             <h3>Martin Doe</h3>
             <p>UI Designer</p>
-            <a href=""><img src="/images/instagram2.svg" alt="insta" /></a>
-            <a href=""><img src="/images/twitter1.svg" alt="twitter" /></a>
-            <a href=""><img src="/images/facebook1.svg" alt="facebook" /></a>
-            <a href=""><img src="/images/linkedin1.svg" alt="link" /></a>
+            <a href=""><img src="./images/instagram2.svg" alt="insta" /></a>
+            <a href=""><img src="./images/twitter1.svg" alt="twitter" /></a>
+            <a href=""><img src="./images/facebook1.svg" alt="facebook" /></a>
+            <a href=""><img src="./images/linkedin1.svg" alt="link" /></a>
           </li>
         </ul>
       </section>
@@ -133,29 +133,29 @@
         <h2>Постоянные клиенты</h2>
         <ul>
           <li>
-            <a href=""><img src="/images/Client1.svg" alt="Client 1" /></a>
+            <a href=""><img src="./images/Client1.svg" alt="Client 1" /></a>
           </li>
           <li>
-            <a href=""><img src="/images/Client2.svg" alt="Client 2" /></a>
+            <a href=""><img src="./images/Client2.svg" alt="Client 2" /></a>
           </li>
           <li>
-            <a href=""><img src="/images/Client3.svg" alt="Client 3" /></a>
+            <a href=""><img src="./images/Client3.svg" alt="Client 3" /></a>
           </li>
           <li>
-            <a href=""><img src="/images/Client4.svg" alt="Client 4" /></a>
+            <a href=""><img src="./images/Client4.svg" alt="Client 4" /></a>
           </li>
           <li>
-            <a href=""><img src="/images/Client5.svg" alt="Client 5" /></a>
+            <a href=""><img src="./images/Client5.svg" alt="Client 5" /></a>
           </li>
           <li>
-            <a href=""><img src="/images/Client6.svg" alt="Client 6" /></a>
+            <a href=""><img src="./images/Client6.svg" alt="Client 6" /></a>
           </li>
         </ul>
       </section>
     </main>
     <footer>
       <section>
-        <a href="/"><img src="/images/WebStudio.svg" alt="logo" /></a>
+        <a href="/"><img src="./images/WebStudio.svg" alt="logo" /></a>
         <address>
           <p>г. Киев, пр-т Леси Украинки, 26</p>
         </address>
@@ -166,21 +166,23 @@
         <h2>присоединяйтесь</h2>
         <ul>
           <li>
-            <a href=""><img src="/images/Ellipseinstfoot.svg" alt="insta" /></a>
-          </li>
-          <li>
             <a href=""
-              ><img src="/images/Ellipsetwitterfoot.svg" alt="twitter"
+              ><img src="./images/Ellipseinstfoot.svg" alt="insta"
             /></a>
           </li>
           <li>
             <a href=""
-              ><img src="/images/Ellipsefacebookfoot.svg" alt="facebook"
+              ><img src="./images/Ellipsetwitterfoot.svg" alt="twitter"
             /></a>
           </li>
           <li>
             <a href=""
-              ><img src="/images/Ellipselinkedfoot.svg" alt="link"
+              ><img src="./images/Ellipsefacebookfoot.svg" alt="facebook"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/Ellipselinkedfoot.svg" alt="link"
             /></a>
           </li>
         </ul>
